2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use ‘zero?’ more.

	* basic.scm (test:fnumber-and-friends): Use ‘zero?’.
	(test:asynchronous-retrieval): Likewise.
	* testing.scm (test-report): Likewise.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Simplify expression in basic.scm.

	* basic.scm (test:protocol-version): Don't bother
	checking that a number is not zero since the later check,
	that the number is greater than 1, covers that case.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v basic] Check protocol version directly.

	* basic.scm (test:parameter-status, test:set-error-verbosity)
	(test:fnumber-and-friends, test:pg-exec-prepared)
	(test:asynchronous-retrieval): Don't check for feature
	‘PQPROTOCOLVERSION’; instead check protocol version directly.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] For ‘make check DEBUG=1’, display the guile(1) invocation.

	* runtest.in: If env var ‘DEBUG’ is set, do ‘set -x’.

2011-09-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Don't use non-existent operator ‘!’ in request-cancel test.

	* basic.scm (test:request-cancel): Use a valid rhs expression
	for the ‘UPDATE’ command; drop ‘!’, which does not exist!

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add test for double-call to ‘pg-trace’.

	* basic.scm (test:tracing-traced-connection): New test proc.
	(main): Use new test proc; update expected-pass number.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add and distribute test/OK.

	* OK: New file.
	* Makefile.am (EXTRA_DIST): Add OK.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Make runtest sanity-check more robust.

	* runtest.in: Don't look for '${prefix}' in ‘@GUILE_LIBSITE@’;
	instead, resolve the dir, whether from env or substitution,
	and check sanity of the result.

2011-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Avoid ‘return-it’.
